--- a/IntelligentMonitor/Views/Home/ChartsEdit.cshtml
+++ b/IntelligentMonitor/Views/Home/ChartsEdit.cshtml
@@ -18,6 +18,6 @@
     <script src="~/js/echarts.min.js"></script>
     <script src="~/js/jquery.dad.min.js"></script>
     <script src="~/layuiadmin/layui/layui.js"></script>
-    <script src="~/js/chartsedit.min.js" asp-append-version="true"></script>
+    <script src="~/js/chartsedit.js" asp-append-version="true"></script>
 </body>
 </html>
