--- a/IntelligentMonitor/Views/Home/Dashboard.cshtml
+++ b/IntelligentMonitor/Views/Home/Dashboard.cshtml
@@ -51,7 +51,7 @@
                         </div>
                         <div class="layui-col-md4 layui-col-md4 layui-col-md4">
                             <div class="layui-inline">
-                                <label class="layui-form-label">Custom range</label>
+                                <label class="layui-form-label">Custom Range</label>
                                 <div class="layui-input-inline">
                                     <input type="text" class="layui-input" id="range" placeholder=" - ">
                                 </div>
