range time html dynamic loading

--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -43,32 +43,7 @@
                         <input type="text" class="layui-input" id="range" placeholder=" - ">
                     </div>
                 </div>
-                <div class="layui-inline ranges" style="margin-left:20px;">
-                    <a href="javascript:;" data-range="5|m" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 5 minutes
-                    </a>
-                    <a href="javascript:;" data-range="15|m" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 15 minutes
-                    </a>
-                    <a href="javascript:;" data-range="30|m" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 30 minutes
-                    </a>
-                    <a href="javascript:;" data-range="1|h" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 1 hour
-                    </a>
-                    <a href="javascript:;" data-range="3|h" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 3 hours
-                    </a>
-                    <a href="javascript:;" data-range="6|h" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 6 hours
-                    </a>
-                    <a href="javascript:;" data-range="12|h" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 12 hours
-                    </a>
-                    <a href="javascript:;" data-range="24|h" class="layui-btn layui-btn-primary layui-btn-sm">
-                        Last 24 hours
-                    </a>
-                </div>
+                <div class="layui-inline ranges" style="margin-left:20px;"></div>
             </div>
             <div class="nav-menu layui-hide">
                 <div class="user">
