remove useless using & publshprofiles

--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -69,6 +69,6 @@
     <script src="~/layuiadmin//layui/layui.js"></script>
     <script src="~/js/echarts.min.js"></script>
     <script src="~/js/mSlider.min.js"></script>
-    <script src="~/js/main.js" asp-append-version="true"></script>
+    <script src="~/js/main.min.js" asp-append-version="true"></script>
 </body>
 </html>
