range time add hover style

--- a/IntelligentMonitor/Views/Home/Index.cshtml
+++ b/IntelligentMonitor/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
             <div class="nav-title">
                 <p>联诺智能监控系统</p>
             </div>
-            <div class="range-menu layui-hide">
+            <div class="range-menu layui-hide" style="text-align:center;">
                 <div class="layui-inline" style="height:100px;line-height:100px;">
                     <label class="layui-form-label" style="width:auto;height:100px;line-height:81px;">自定义日期范围</label>
                     <div class="layui-input-inline" style="width: 300px;">
