可以编辑添加的图，差不多ok了

--- a/IntelligentMonitor/Views/Home/Dashboard.cshtml
+++ b/IntelligentMonitor/Views/Home/Dashboard.cshtml
@@ -49,6 +49,7 @@
                             <div class="layui-input-inline">
                                 <select name="item" class="item"></select>
                             </div>
+                            <input type="text" class="itemId layui-hide" />
                         </div>
                         <div class="layui-col-md4 layui-col-md4 layui-col-md4">
                             <div class="layui-input-inline layui-hide">
