query button style

--- a/IntelligentMonitor/Views/Home/Dashboard.cshtml
+++ b/IntelligentMonitor/Views/Home/Dashboard.cshtml
@@ -53,17 +53,11 @@
                         </div>
                         <div class="layui-col-md4 layui-col-md4 layui-col-md4">
                             <div class="layui-input-inline layui-hide">
-                                <button class="layui-btn layui-btn-danger layui-btn-fluid btnRemoveQuery">
-                                    Remove Query
-                                </button>
+                                <button class="layui-btn layui-btn-danger btnRemoveQuery">Remove Query</button>
                             </div>
                             <div class="layui-input-inline">
-                                <button class="layui-btn layui-btn-fluid btnQuery">
-                                    Add Query
-                                </button>
-                            </div>
-                            <div class="layui-input-inline">
-                                <button class="layui-btn layui-btn-fluid" lay-submit="" lay-filter="save">Save</button>
+                                <button class="layui-btn btnQuery">Add Query</button>
+                                <button class="layui-btn" lay-submit="" lay-filter="save">Save</button>
                             </div>
                         </div>
                     </div>
